chore: update /publish-docker skill to include otel-collector image
Adds dazzleduck-otel-collector arm64/amd64 builds and manifests to the
publish workflow, and documents the sqlite negative-cache workaround.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>